# BROP

./: README.md  pyproject.toml  setup.py
brop/: __init__.py  toplevel.py
broplib/: __init__.py  brop.py
broplib/brop/: brop.py
broplib/cli/: README.md  bropper.py
