[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brop"
version = "1.0.0"
description = "BROP (Blind Return-Oriented Programming) Exploitation Toolkit"
readme = "README.md"
authors = [{ name = "Psjsus4" }]
license = { text = "MIT" }
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
keywords = ["exploit", "ctf", "brop", "rop", "pwntools"]
requires-python = ">=3.8"
dependencies = ["pwntools", "rich", "packaging"]


[project.urls]
Homepage = "https://github.com/Psjsus4/BROP"

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]
source = ["brop", "broplib"]

[tool.coverage.paths]
broplib = ["broplib", "*/brop/pwnlib", "*\\brop\\pwnlib"]
brop = ["brop", "*/brop/brop", "*\\brop\\brop"]

[project.scripts]
bropper = "broplib.cli.bropper:main"
